# simple_http

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
examples/: app_data.rs  content_type.rs  context.rs  header.rs  hello_world.rs  mounting_folder.rs  reading_body.rs  websocket.rs
examples/html/: home.html  index.html  random.txt  style.css
examples/html/sub_folder/: file.txt  index.html
src/: any_map.rs  application.rs  context.rs  error.rs  lib.rs  node.rs  request.rs  response.rs  server.rs  service.rs  settings.rs  websocket.rs
