[package]
name = "kaid_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = { version = "0.12.1" }

tiny_http = { workspace = true }

tokio = { workspace = true, features = ["full"]}
tokio-stream = { workspace = true }
